Reorganized Build files to show include folder in Qt Creator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ include_directories(devices)
 
 # Add subdirectories
 add_subdirectory(src)
+add_subdirectory(include)
 add_subdirectory(devices)
 add_subdirectory(deps/inih)
 
