--- a/rpiweatherd_config.h.in
+++ b/rpiweatherd_config.h.in
@@ -14,9 +14,12 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#define RPIWEATHERD_VERSION_MAJOR @RPIWEATHERD_VERSION_MAJOR@
-#define RPIWEATHERD_VERSION_MINOR @RPIWEATHERD_VERSION_MINOR@
-#define RPIWEATHERD_FULL_SERVER_ID @RPIWEATHERD_FULL_SERVER_ID@
+#define RPIWEATHERD_VERSION         @RPIWEATHERD_VERSION@
+#define RPIWEATHERD_FULL_SERVER_ID  @RPIWEATHERD_FULL_SERVER_ID@
+#define RPIWEATHERD_BUILD_DATE	    "@RPIWEATHERD_BUILD_DATE@"
+
+#define GIT_BRANCH                  @GIT_BRANCH@
+#define GIT_COMMIT_HASH             @GIT_COMMIT_HASH@
 
 /* Function Definitions */
 #cmakedefine HAVE_DAEMON
