Fixed installation and uninstallation

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,3 +54,10 @@ set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR})
 # Install target and run script to determine init system
 install(TARGETS rpiweatherd DESTINATION bin)
 install(SCRIPT "${CMAKE_SOURCE_DIR}/PostInstall.cmake")
+
+# Install files in skel folder and create it
+install(DIRECTORY DESTINATION "/etc/rpiweatherd/skel")
+install(FILES "${PROJECT_SOURCE_DIR}/skel/rpiweatherd.conf"
+    DESTINATION "/etc/rpiweatherd/skel/rpiweatherd.conf")
+install(FILES "${PROJECT_SOURCE_DIR}/skel/rpiwd_triggers.conf"
+    DESTINATION "/etc/rpiweatherd/skel/rpiwd_triggers.conf")
