Added triggers - initial commit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,3 +95,7 @@ check_function_exists(getopt HAVE_GETOPT)
 check_function_exists(flock  HAVE_FLOCK)
 check_function_exists(nanosleep HAVE_NANOSLEEP)
 check_function_exists(strptime HAVE_STRPTIME)
+check_function_exists(getline HAVE_GETLINE)
+check_function_exists(vsyslog HAVE_VSYSLOG)
+check_function_exists(fork HAVE_FORK)
+check_function_exists(execl HAVE_EXECL)
