--- a/skel/rpiwd_triggers.conf
+++ b/skel/rpiwd_triggers.conf
@@ -1,4 +1,4 @@
 # ---------------------------------------------------------------------------------------
 # rpiweatherd Trigger Configuration File
 # ---------------------------------------------------------------------------------------
-# condition     action      name        args
+# CONDITION     ACTION      TARGET        ARGS
